# vFlow

./: README.md  README_EN.md  build.gradle.kts  gradle.properties
.github/workflows/: release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/chaomixian/vflow/services/: IShizukuUserService.aidl
app/src/main/assets/ppocr_v5/: ppocr_keys.txt
app/src/main/cpp/: CMakeLists.txt  ppocr_v5.cpp  ppocr_v5.h  ppocr_v5_jni.cpp
app/src/main/java/com/chaomixian/vflow/: VFlowApplication.kt
app/src/main/java/com/chaomixian/vflow/api/: ApiService.kt
app/src/main/java/com/chaomixian/vflow/ocr/: PpOcrV5ModelManager.kt  (+1 more)
app/src/main/res/drawable/: bg_step_popup_action_button.xml  rounded_chef_hat_24.xml  rounded_keyboard_arrow_down_24.xml  rounded_list_alt_check_24.xml  rounded_more_24.xml  rounded_splitscreen_add_24.xml
app/src/main/res/layout/: activity_workflow_editor.xml  item_action_step.xml  item_app_expandable.xml  item_shortcut_picker.xml  item_trigger_group.xml  partial_launch_shortcut_editor.xml  partial_notification_trigger_editor.xml  popup_editor_tools_menu.xml  popup_step_actions.xml  row_editor_input.xml  sheet_action_picker.xml  sheet_shortcut_picker.xml
app/src/main/res/raw/: disclaimer.txt
app/src/main/res/values/: colors.xml  strings.xml  strings_module.xml  themes.xml  vtype_properties.xml
app/src/main/res/values-en/: strings.xml  strings_module.xml  vtype_properties.xml
app/src/main/res/values-night/: themes.xml
core/: build.gradle.kts
scripts/signing/: README.md  rotate_sign_apks.sh
(+182 files in other folders)
